# binmarshal

./: Cargo.toml  LICENSE  README.md
binmarshal-macros/: Cargo.toml
binmarshal-macros/src/: lib.rs
examples/: basic.rs  complex_context.rs  context.rs  lifetime.rs  payload.rs
src/: cow.rs  lib.rs  numeric.rs  rw.rs
