[package]
name = "binmarshal"
version = "0.2.4"
edition = "2021"
description = "Pack and unpack structs and enums into and out of binary data streams."
documentation = "https://docs.rs/binmarshal"
repository = "https://github.com/GrappleRobotics/binmarshal"
readme = "README.md"
authors = ["Jaci Brunning"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binmarshal-macros = { version = "^0.2.0", path = "binmarshal-macros", default-features = false }
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.159", optional = true }

[features]
std = []
serde = ["binmarshal-macros/serde", "dep:serde"]
schema = ["binmarshal-macros/schema", "dep:schemars"]
default = ["serde", "schema"]