[package]
name = "binmarshal"
version = "1.1.2"
edition = "2021"
description = "Pack and unpack structs and enums into and out of binary data streams."
documentation = "https://docs.rs/binmarshal"
repository = "https://github.com/GrappleRobotics/binmarshal"
readme = "README.md"
authors = ["Jaci Brunning"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", optional = true, default-features = false }
binmarshal-macros = { version = "^1.1.0", path = "binmarshal-macros", default-features = false }
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.159", optional = true }

[features]
std = ["anyhow/std"]
serde = ["binmarshal-macros/serde", "dep:serde"]
schema = ["binmarshal-macros/schema", "dep:schemars"]
anyhow = ["dep:anyhow"]
lasercan_nop_patch = []
default = ["std", "serde", "schema", "anyhow"]
