[package]
name = "binmarshal-macros"
version = "1.1.0"
edition = "2021"
description = "Derive and helper macros for binmarshal."
documentation = "https://docs.rs/binmarshal-macros"
repository = "https://github.com/GrappleRobotics/binmarshal"
readme = "../README.md"
authors = ["Jaci Brunning"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }

[features]
serde = []
schema = []
default = ["serde", "schema"]